--- a/View/MainWindow.xaml
+++ b/View/MainWindow.xaml
@@ -4,15 +4,20 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d"
-        Title="Будни Программиста" Height="450" Width="800">
+        Title="Будни Программиста" Height="350" Width="350">
     <Grid>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
+        </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition/>
         </Grid.RowDefinitions>
         <Button Content="Назад" Command="{Binding PreviousMonthCommand}"  Grid.Row="0" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="10"/>
-        <TextBlock Text="{Binding SelectedMonth, StringFormat='MMMM yyyy'}"  HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="18"/>
-        <Button Content="Вперед" Command="{Binding NextMonthCommand}" Grid.Row="0" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="10"/>
-        <Frame x:Name="FramePage" Grid.Row="1" NavigationUIVisibility="Hidden"/>
+        <TextBlock Grid.Column="1 " Text="{Binding SelectedMonth, StringFormat='MMMM yyyy'}"  HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="18"/>
+        <Button Content="Вперед" Command="{Binding NextMonthCommand}" Grid.Row="0" Grid.Column="2" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="10"/>
+        <Frame x:Name="FramePage" Grid.Row="1" NavigationUIVisibility="Hidden" Grid.ColumnSpan="3"/>
     </Grid>
 </Window>
