--- a/View/MainWindow.xaml
+++ b/View/MainWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="Будни_Программиста.MainWindow"
+﻿<Window x:Class="Будни_Программиста.View.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -15,9 +15,12 @@
             <RowDefinition Height="Auto"/>
             <RowDefinition/>
         </Grid.RowDefinitions>
-        <Button Content="Назад" Command="{Binding PreviousMonthCommand}"  Grid.Row="0" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="10"/>
-        <TextBlock Grid.Column="1 " Text="{Binding SelectedMonth, StringFormat='MMMM yyyy'}"  HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="18"/>
-        <Button Content="Вперед" Command="{Binding NextMonthCommand}" Grid.Row="0" Grid.Column="2" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="10"/>
-        <Frame x:Name="FramePage" Grid.Row="1" NavigationUIVisibility="Hidden" Grid.ColumnSpan="3"/>
+        <Button Content="Назад" Command="{Binding PreviousMonthCommand}"  Grid.Row="0" 
+                HorizontalAlignment="Left" VerticalAlignment="Top" Margin="10"/>
+        <TextBlock Grid.Row="0" Grid.Column="1 " Text="{Binding SelectedMonth, StringFormat='MMMM yyyy'}"  
+                   HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="18"/>
+        <Button Content="Вперед" Command="{Binding NextMonthCommand}" Grid.Row="0" Grid.Column="2" 
+                HorizontalAlignment="Right" VerticalAlignment="Top" Margin="10"/>
+        <Frame x:Name="FramePage" Grid.Row="1" NavigationUIVisibility="Hidden" Grid.ColumnSpan="3" Grid.Column="0" />
     </Grid>
 </Window>
